# SO-projekt

./: CMakeLists.txt  Philosopher.cpp
SO-projekt1/: CMakeLists.txt  PEA_Projekt2_kod.rar  README.md  main.cpp
SO-projekt1/AIZO_Projekt/: ArrayManager.cpp  ArrayManager.h  ArrayTester.cpp  ArrayTester.h  CMakeLists.txt  FileManager.cpp  FileManager.h  Interface.cpp  Interface.h  Sorter.cpp  Sorter.h  SortingEngine.cpp  SortingEngine.h  Timer.cpp  Timer.h  main.cpp
SO-projekt1/AIZO_Projekt2/: CMakeLists.txt  FileManager.cpp  FileManager.h  GEdge.cpp  GEdge.h  GraphGenerator.cpp  GraphGenerator.h  GraphList.cpp  GraphList.h  GraphMatrix.cpp  GraphMatrix.h  Interface.cpp  Interface.h  MST.cpp  MST.h  Queue.cpp  Queue.h  Sets.cpp  Sets.h  ShortestPath.cpp  ShortestPath.h  Timer.cpp  Timer.h  main.cpp
SO-projekt1/PEA_Projekt2/: CMakeLists.txt  FileManager.cpp  FileManager.h  Graph.h  Interface.cpp  Interface.h  NearestNeighbor.h  SimAnnealing.cpp  SimAnnealing.h  TabuSearch.cpp  TabuSearch.h  Timer.cpp  Timer.h  main.cpp
SO-projekt1/PEA_projekty/PEA_Projekt1/: 17.txt  6.txt  BnBLittle.cpp  BnBLittle.h  BruteForce.cpp  BruteForce.h  CMakeLists.txt  Dynamic.cpp  Dynamic.h  FileManager.cpp  FileManager.h  Graph.cpp  Graph.h  GraphGenerator.cpp  GraphGenerator.h  Interface.cpp  Interface.h  Timer.cpp  Timer.h  main.cpp
SO-projekt1/PEA_projekty/PEA_Projekt3/: CMakeLists.txt  FileManager.cpp  FileManager.h  GeneticAlgorithm.cpp  GeneticAlgorithm.h  Graph.cpp  Interface.cpp  Interface.h  NearestNeighbor.cpp  SimAnnealing.cpp  SimAnnealing.h  TabuSearch.cpp  TabuSearch.h  main.cpp
SO-projekt1/untitled/: ArrayManager.cpp  ArrayManager.h  ArrayTester.cpp  ArrayTester.h  CMakeLists.txt  FileManager.cpp  FileManager.h  Sorter.cpp  Sorter.h  SortingEngine.cpp  SortingEngine.h  Timer.cpp  Timer.h  main.cpp
SO-projekt1/untitled1/: CMakeLists.txt
SO-projekt1/untitled2/: CMakeLists.txt  calc_xmm.cpp
SO-projekt1/untitled3/: CMakeLists.txt  main.cpp
SO-projekt1/untitled4/: main.cpp
SO2_Projekt2/: CMakeLists.txt  README.md
SO2_Projekt2/client/: ChatClient.cpp  ChatClient.h  main.cpp
SO2_Projekt2/server/: ChatServer.cpp  ChatServer.h  main.cpp
